--- a/Project.toml
+++ b/Project.toml
@@ -5,4 +5,5 @@ version = "0.1.0"
 
 [deps]
 ImageInTerminal = "d8c32880-2388-543b-8c61-d9f865259254"
+PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 VideoIO = "d6d074c3-1acf-5d4c-9a43-ef38773959a2"
