--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-          - windows
+          #- windows
         arch:
           - x64
     steps:
