--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,5 @@ jobs:
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - run: julia --project=. -e 'using Pkg; Pkg.instantiate(); include("./build.jl")'
+      #- run: julia --project=. -e 'using Pkg; Pkg.instantiate(); include("./build.jl")'
+      - run: bash build.sh
